fix jumpy nav items

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -87,6 +87,7 @@ a.nav-item {
   margin-top: 3px;
   padding: 4px;
   text-decoration: none;
+  border-bottom: 6px solid transparent;
 }
 
 a.nav-item:hover, a.nav-item.selected {
